--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel natus veniam magni, rem nobis accusantium eum amet explicabo, error repudiandae delectus dolorem est quidem similique voluptate earum dolorum optio soluta?</p>
+    <p>Paragraf drugi</p>
 </body>
 </html>
